# medical-questions-answering

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
data/: test_questions.json
scripts/: ab_test_prompts.py
src/api/: Dockerfile  dataset.py  evaluation.py  feedback_store.py  graph.py  llm_generation.py  main.py  model.py  models.py  prompts.py  retrieval.py  schemas.py  train.py
src/api/dataset/: __init__.py  dataset.py
src/bot/: Dockerfile  main.py
src/notebooks/: main.ipynb
